# sycophancy-evals

./: .gitignore  README.md  main.py  notes.md  pyproject.toml
src/sycophancy_evals/: analyze.py  dataset.py  difficulty_check.py  final_analysis.py  generate_arithmetic.py  hello_inspect.py  metrics.py  models.py  scorer.py  solver.py  validation_analyze.py  validation_sample.py
