[project]
name = "sycophancy-eval"
version = "0.1.0"
description = "Empirical evaluation of sycophantic behavior across language models"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
    "anthropic",
    "google-genai",
    "ollama",
    "pandas",
    "matplotlib",
    "ipykernel",
    "jupyter",
    ]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]