[project]
name = "sycophancy-eval"
version = "0.1.0"
description = "Empirical evaluation of sycophantic behavior across language models"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
    "anthropic",
    "google-genai",
    "ollama",
    "pandas",
    "matplotlib",
    "ipykernel",
    "jupyter",
    "inspect-ai>=0.3.239",
    "openai>=2.41.1",
    "google-generativeai>=0.8.6",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.hatch.build.targets.wheel]
packages = ["src/sycophancy_evals"]
